# zhgchgli.github.io

./: .gitignore  404.html  CLAUDE.md  CNAME  Gemfile  MergeAllTo.sh  README.md  TranslatorTrigger.sh  _config.en.yml  _config.jp.yml  _config.yml  _config.zh-cn.yml  _config.zh-tw.yml  _translator_backup  ads.txt  archive.html  categories.html  english-ios.xml  feed.xml  index.html  ios-app-development.xml  link.txt  posts.html  redirects.json  reports-archive.html  reports.html  robots.txt  search.html  search.json  site.webmanifest  sitemap.xml  sw.js  sw.min.js  tags.html  testParser.sh  top30.json  top7.json  total.json  translator.sh  translatorFix.sh  (+2 more)
_data/: active_ad.yml  ad_products.json  ads_stats.json  authors.yml  contact.yml  nav.yml  share.yml  social.yml  strings.yml
_includes/: ad-active-card.html  ad-fallback-card.html  ad-product-card.html  ad-sponsored-card-middle.html  advertisements.html  buymeacoffee.html  dense-row.html  drawer.html  footer.html  giscus.html  head.html  icon.html  lang-switcher.html  metadata-hook.html  pager.html  post-header.html  post-meta.html  post-sharing.html  post-summary.html  related-posts.html  report-content.html  scripts.html  sidebar.html  topbar.html
_layouts/: archive-category.html  archive-tag.html  archive-year.html  compress.html  default.html  home.html  page.html  post.html  report-shell.html  report.html
_pages/: contact.md
_plugins/: Analytics.rb  ZMedium.rb  aio_faq.rb  asset_hash.rb  howto.rb  json_generator.rb  lang_filters.rb  lqip_pre_render.rb  photo_optimization.rb  post_content_filters.rb  post_middle_ad.rb  posts-remove-medium-footer-hook.rb  seo_tag_tweaks.rb  setCanonicalUrl.rb  short_url_redirects.rb  strip_seo_tag_schema.rb  url_formatter.rb  views_data.rb  views_filter.rb  wrap_bare_pre.rb  zhgchgli-customize.rb  zhgchgli.rb
_posts/: 2018-10-06-b7a3fb3d5531.md  2018-10-06-medium的第一篇-b7a3fb3d5531.md  (+145 more)
_reports/: 2026-04.md  (+1 more)
tools/lqip_generator/: pyproject.toml
tools/lqip_generator/src/lqip_generator/: __main__.py
tools/zhgchgli/: pyproject.toml
tools/zhgchgli/src/zhgchgli/: aioMaker.py  helper.py  optimizePhotos.py  seoMaker.py  translator.py  translator_cn.py  translator_jp.py  unifyAllTags.py
(+3499 files in other folders)
